dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - dashboard.portal-local
      secretName: portal-tls-secret
  rules:
  - host: dashboard.portal-local
    http:
      paths:
        - path:
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 8443
